# SysDesign

./: Cargo.toml  README.md  flake.nix  model.mpk
cv-test/: Cargo.toml
live/: Cargo.toml  ]
live/src/: main.rs
live/ui/: app.slint
lowlight/: Cargo.toml
lowlight-lib/: Cargo.toml
lowlight-lib/examples/: cache_dirs.rs  sqlite.rs
lowlight-lib/src/: capture.rs  lib.rs  lowlight.rs  model.rs
lowlight/src/: main.rs
lowlight/ui/: app.slint
